create html's pages. Read only

--- a/htmls/home.html
+++ b/htmls/home.html
@@ -72,10 +72,6 @@
 
 
     <div class="container" role="main">
-        <div class="page-header text-center">
-            <h2>New photos</h2>
-        </div>
-
         <div class="row news">
             <div class="col-md-6 col-md-offset-3">
 
@@ -89,6 +85,14 @@
 
                     <div class="question-body">
                         <img src="jpg/L187Wt6qbbc.jpg" class="photo">
+
+                        <a class="to-like" href="#">
+                            <span  class="glyphicon glyphicon-heart"></span>
+                        </a>
+
+                        <a class="to-comment" href="photo_id.html">
+                            <span  class="glyphicon glyphicon-comment"></span>
+                        </a>
                     </div>
                 </div>
 
@@ -102,6 +106,14 @@
 
                     <div class="question-body">
                         <img src="jpg/L51DJL8nn98.jpg" class="photo">
+
+                        <a class="to-like" href="#">
+                            <span  class="glyphicon glyphicon-heart"></span>
+                        </a>
+
+                        <a class="to-comment" href="photo_id.html">
+                            <span  class="glyphicon glyphicon-comment"></span>
+                        </a>
                     </div>
                 </div>
 
@@ -115,6 +127,14 @@
 
                     <div class="question-body">
                         <img src="jpg/iP0_OBR67e8.jpg" class="photo">
+
+                        <a class="to-like" href="#">
+                            <span  class="glyphicon glyphicon-heart"></span>
+                        </a>
+
+                        <a class="to-comment" href="photo_id.html">
+                            <span  class="glyphicon glyphicon-comment"></span>
+                        </a>
                     </div>
                 </div>
 
