--- a/htmls/login.html
+++ b/htmls/login.html
@@ -73,7 +73,7 @@
                     </div>
 
                     <div class="form-group">
-                        <input type="submit" value="Log In!" class="btn navbar-btn">
+                        <input type="submit" value="Login" class="btn btn-success">
                         <!--<button type="button" class="btn navbar-btn">Log In!</button>-->
                     </div>
 
