--- a/htmls/user.html
+++ b/htmls/user.html
@@ -1,10 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Home</title>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/my.css">
 </head>
 <body>
+<nav class="navbar" role="navigation">
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+
+            <a class="navbar-brand" href="home.html">Squary</a>
+        </div>
+
+        <div class="collapse navbar-collapse navbar-right">
+            <ul class="nav navbar-nav navbar-right center-block">
+                <li>
+                    <form class="navbar-form navbar-left" role="search">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Search">
+                            <span class="input-group-btn">
+                                            <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
+                                        </span>
+                        </div>
+                    </form>
+                </li>
+
+                <li>
+                    <form action="create.html">
+                        <input value="Create" type="submit" class="btn btn-success navbar-btn">
+                    </form>
+                    <!--<button href="{%url 'polls:ask' %}" type="button" class="btn btn-success navbar-btn">Ask!</button>-->
+                </li>
+
+                <li>
+                    <img src="jpg/k7BF1vsXveY.jpg" alt="Responsive image" class="img-circle center-block">
+                </li>
+
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Devernua<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="settings.html">Settings</a></li>
+                        <li><a href="logout.html">Logout</a></li>
+                    </ul>
+                </li>
+
+                <!--{% else %}
+                <li>
+                    <a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Log In</a>
+
+                    <a href="{% url 'polls:register' %}"><span class="glyphicon glyphicon-user"></span> Registration</a>
+                </li>
+
+                {% endif %} -->
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div>
+</nav>
+
+
+<div class="container" role="main">
+
+    <div class="row">
+        <div class="col-md-4 col-md-offset-4 user text-center">
+            <img src="jpg/k7BF1vsXveY.jpg" class="img-rounded">
+            <h3 class="nickname" href="user.html">Devernua</h3>
+            <h4>I love cats <3</h4>
+            <a href="#" ><span role="button" class="subscribe badge text-center">
+                <span>Subscribe</span>
+                <span class="glyphicon glyphicon-check"></span>
+            </span></a>
+
+        </div>
+    </div>
+
+    <div class="row photos">
+        <hr>
+
+        <div class="col-md-4 ph">
+            <a href="photo_id.html"><img src="jpg/iP0_OBR67e8.jpg" class="photo"></a>
+
+            <a class="to-like" href="#">
+                <span  class="glyphicon glyphicon-heart"></span>
+            </a>
+
+            <a class="to-comment" href="photo_id.html">
+                <span  class="glyphicon glyphicon-comment"></span>
+            </a>
+
+
+        </div>
+        <div class="col-md-4 ph">
+            <a href="photo_id.html"><img src="jpg/k7BF1vsXveY.jpg" class="photo"></a>
+            <a class="to-like" href="#">
+                <span  class="glyphicon glyphicon-heart"></span>
+            </a>
+
+            <a class="to-comment" href="photo_id.html">
+                <span  class="glyphicon glyphicon-comment"></span>
+            </a>
+        </div>
+        <div class="col-md-4 ph">
+            <a href="photo_id.html"><img src="jpg/L51DJL8nn98.jpg" class="photo"></a>
+            <a class="to-like" href="#">
+                <span  class="glyphicon glyphicon-heart"></span>
+            </a>
+
+            <a class="to-comment" href="photo_id.html">
+                <span  class="glyphicon glyphicon-comment"></span>
+            </a>
+        </div>
+        <div class="col-md-4 ph">
+            <a href="photo_id.html"><img src="jpg/L187Wt6qbbc.jpg" class="photo"></a>
+            <a class="to-like" href="#">
+                <span  class="glyphicon glyphicon-heart"></span>
+            </a>
+
+            <a class="to-comment" href="photo_id.html">
+                <span  class="glyphicon glyphicon-comment"></span>
+            </a>
+        </div>
+        <div class="col-md-4 ph">
+            <a href="photo_id.html"><img src="jpg/L51DJL8nn98.jpg" class="photo"></a>
+            <a class="to-like" href="#">
+                <span  class="glyphicon glyphicon-heart"></span>
+            </a>
+
+            <a class="to-comment" href="photo_id.html">
+                <span  class="glyphicon glyphicon-comment"></span>
+            </a>
+        </div>
+        <div class="col-md-4 ph">
+            <a href="photo_id.html"><img src="jpg/jSAKrlMWZpI.jpg" class="photo"></a>
+            <a class="to-like" href="#">
+                <span  class="glyphicon glyphicon-heart"></span>
+            </a>
+
+            <a class="to-comment" href="photo_id.html">
+                <span  class="glyphicon glyphicon-comment"></span>
+            </a>
+        </div>
+    </div>
+
+    <div class="text-center">
+        <button type="button" class="btn btn-default ">Загрузить еще</button>
+    </div>
+
+
+    </div>
+</div>
 
 </body>
 </html>
